# Capstone-DS

./: .gitignore  README.md  main.py  requirements.txt
data-science/: README.md  pyproject.toml
data-science/conf/base/: catalog.yml  parameters_modelling.yml  parameters_retraining.yml
data-science/docs/source/: conf.py  index.rst
data-science/notebooks/: EDA Data Visualization.ipynb  EDA SQL.ipynb  SpaceX Scraping.ipynb
data-science/src/data_science/: __init__.py  __main__.py  settings.py
data-science/src/data_science/pipelines/data_processing/: nodes.py  pipeline.py
data-science/src/data_science/pipelines/modelling/: __init__.py  nodes.py  pipeline.py
data-science/src/data_science/pipelines/retraining/: __init__.py  nodes.py  pipeline.py
data-science/src/data_science/postgres_fn/: postgres_io.py
data-science/tests/pipelines/modelling/: test_pipeline.py
data-science/tests/pipelines/retraining/: test_pipeline.py
data_engineering/: dagster_cloud.yaml  pyproject.toml  setup.cfg  setup.py
data_engineering/data_engineering/: __init__.py  assets.py  definitions.py  jobs.py  resources.py  schedules.py
data_engineering/data_engineering/functions/: functions.py  postgresql_io.py
research/: Data Wrangling.ipynb  Predictive Analysis.ipynb  SpaceX API.ipynb
src/data_ingestion/: spacex_api.py
